# brightdata-mcp-full

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
docs/: auth.md  examples.md  groups.md  troubleshooting.md
lib/: __init__.py  client.py  codegen.py  groups.py  safety.py
lib/types/: __init__.py
scripts/: generate_groups_doc.py  regenerate.py
tests/integration/: conftest.py  test_account_management_live.py  test_groups_filter.py  test_groups_load.py  test_other_groups_smoke.py  test_write_gate.py
tools/: __init__.py
tools/account_management/: __init__.py  bd_account_get_balance.py  bd_account_get_status.py  bd_account_management_create_api_by_partner_name_signup_dedicated_dc.py  bd_account_management_create_api_by_partner_name_signup_dedicated_isp.py  bd_account_management_create_api_by_partner_name_signup_residential.py  bd_account_management_create_api_by_partner_name_signup_shared_dc.py  bd_account_management_create_api_by_partner_name_signup_shared_isp.py  bd_account_management_create_api_by_partner_name_signup_smart_resi.py  bd_account_management_create_api_by_partner_name_usage_webhook.py  bd_account_management_create_zone.py  bd_account_management_create_zone_add_password.py  bd_account_management_create_zone_blacklist.py  bd_account_management_create_zone_change_disable.py  bd_account_management_create_zone_domain_perm.py  bd_account_management_create_zone_ips.py  bd_account_management_create_zone_ips_migrate.py  (+54 more)
tools/archive/: __init__.py  (+6 more)
(+89 files in other folders)
