[project]
name = "brightdata-mcp-full"
version = "0.1.0"
description = "Comprehensive Python MCP server wrapping Bright Data's full REST API (350+ endpoints)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "artgas1" },
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.scripts]
brightdata-mcp-full = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring live BD API",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
